# chr2025-unstable-data-paper

./: .gitignore  Makefile  README.md  anthology-ch.cls  bibliography.bib  paper.tex  pyproject.toml
data/: hathi_update_counts.csv
data/hathi/deletions/: 2025-01-01.txt  2025-02-01.txt  2025-03-01.txt  2025-04-01.txt  2025-05-01.txt  2025-06-01.txt
data/hathi/premis/: 33433081683744.mets.xml  39015060425942.mets.xml  b3924132.mets.xml  c2641998.mets.xml  hathi_premis_events.csv  hx28d7.mets.xml
data/hathi/updates/: _hathi_file_list.json  hathi_field_list.txt
data/ppa/: excerpts-2023-09-20.csv  ppa_genre_metadata_overlap.csv  ppa_htfiles_lastmod.csv  ppa_rsync_changes_20250219-132414.csv  ppa_work_metadata.csv
notebooks/: hathi-rate-of-change.py  page-level-genre.py  ppa-corpus-changes.py  ppa-excerpts.py
notebooks/__marimo__/: hathi-rate-of-change.ipynb  page-level-genre.ipynb  ppa-corpus-changes.ipynb  ppa-excerpts.ipynb
scripts/: files_lastmod.py  get_hathi_update_data.py  premis_events.py
