[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chr2025-unstable-data-paper"
version = "0.1.0"
description = "Code, data, and LaTex for CHR2025 short paper."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "marimo",
    "altair",
    "polars",
    "vl-convert-python",
    "intspan",
    "requests",
    "tqdm",
    "pairtree>=0.8.1",
    "nbformat>=5.10.4",
]

[tool.setuptools]
packages = []
